--- a/progress-container.css
+++ b/progress-container.css
@@ -20,7 +20,20 @@ body {
 
 .progress-input {
   border-radius: 14px;
-  width: 50px;
+  width: 38px;
+  height: 24px;
+  margin-right: 10px;
+  box-sizing: border-box;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
 }
 
 .toggle {
@@ -42,6 +55,7 @@ body {
   background-color: #ccc;
   border-radius: 34px;
   transition: 0.4s;
+  cursor: pointer;
 }
 
 .toggle-slider:before {
