--- a/progress-container.css
+++ b/progress-container.css
@@ -1,16 +1,19 @@
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
   font-family: Arial, sans-serif;
   font-weight: 600;
 }
 
 .progress-container {
   display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 80vh;
+  margin: 0;
   flex-direction: column;
+}
+
+.progress-container-loader {
+  width: 134px;
 }
 
 .loader {
@@ -43,7 +46,7 @@ body {
   width: 38px;
   height: 24px;
   text-align: center;
-  margin-right: 10px;
+  margin-right: 16px;
   box-sizing: border-box;
 }
 
@@ -69,7 +72,7 @@ input[type="number"] {
 }
 
 .toggle-slider {
-  margin-right: 10px;
+  margin-right: 16px;
   position: relative;
   width: 38px;
   height: 24px;
@@ -118,5 +121,12 @@ input[type="number"] {
 @keyframes rotate {
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@media (orientation: landscape) {
+  .progress-container {
+    flex-direction: row;
+    width: 100%;
   }
 }
